game003/src/style.css
:root {
  --color-primary: turquoise;
  --color-secondary: hotpink;
  --color-tertiary: teal;
  --color-accent: blueviolet;
  --color-background: steelblue;
  --shadow-spread: 3px;

  --radius: 2;
  --gap: 8px;
  --diameter-h: calc(var(--radius) * 1.75 + 1);
  --diameter-v: calc(var(--radius) * 2 + 1);
  --usable-width: calc(100vw - var(--radius) * 2 * var(--gap));
  --usable-height: calc(100vh - var(--radius) * 2 * var(--gap));
  --aspect: 1.1547; /* top-flat hex */
}

* {
  -webkit-user-select: none;
  user-select: none;
}

body {
  touch-action: manipulation;
  margin: 0;
  color: white;
  height: 100vh;
  align-content: center;
  overflow: hidden;
  background-color: #000000;
}

.grid {
  --sub-row: 2;
  --sub-col: 4;
  --row-offset: calc(var(--radius) * var(--sub-row) + 1);
  --col-offset: calc(var(--radius) * var(--sub-col) - (var(--radius) - 1));
  --color: var(--color-tertiary);

  display: grid;
  max-width: max-content;
  padding: 12px;
  gap: var(--gap);
  margin-inline: auto;
  filter: drop-shadow(0 0 var(--shadow-spread) var(--color));
  /* clip-path: polygon(0 20%, 40% 0, 60% 0, 100% 20%, 100% 80%, 60% 100%, 40% 100%, 0 80%); */
  clip-path: ellipse(55% 50% at 50% 50%);

  &.over {
    --color: crimson;
  }
}

.hex {
  --r: attr(data-r number);
  --c: attr(data-c number);

  grid-row-start: calc((-1 * (var(--r) - var(--c))) + var(--row-offset));
  grid-column-start: calc(3 * (var(--r) + var(--c)) + var(--col-offset));
  grid-row-end: span var(--sub-row);
  grid-column-end: span var(--sub-col);

  background-image: radial-gradient(at 30% 10%, var(--color-primary), var(--color-accent));
  aspect-ratio: var(--aspect);
  max-width: 40vw;
  width: min(calc(var(--usable-width) / var(--diameter-h)), calc(var(--usable-height) / var(--diameter-v)));
  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
  touch-action: none;
  transition:
    filter 0.3s,
    scale 0.1s;

  &.hit {
    filter: brightness(0.33) grayscale(0.66);
    scale: 0.9;
  }

  &.target {
    --color-primary: var(--color-secondary);
  }
}

